; ModuleID = '/home/carl/AnghaBench/systemd/src/nspawn/extr_nspawn-oci.c_oci_hooks.c'
source_filename = "/home/carl/AnghaBench/systemd/src/nspawn/extr_nspawn-oci.c_oci_hooks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8*, i32, i32, i32, i32 }

@oci_hooks.table = internal constant [4 x %struct.TYPE_3__] [%struct.TYPE_3__ { i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i32 0, i32 0), i32 129, i32 128, i32 0, i32 0 }, %struct.TYPE_3__ { i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i32 0, i32 0), i32 129, i32 128, i32 0, i32 0 }, %struct.TYPE_3__ { i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i32 0, i32 0), i32 129, i32 128, i32 0, i32 0 }, %struct.TYPE_3__ zeroinitializer], align 16
@.str = private unnamed_addr constant [9 x i8] c"prestart\00", align 1
@.str.1 = private unnamed_addr constant [10 x i8] c"poststart\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"poststop\00", align 1
@oci_unexpected = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32*, i32, i8*)* @oci_hooks to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @oci_hooks(i8* %0, i32* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %9 = load i32*, i32** %6, align 8
  %10 = load i32, i32* @oci_unexpected, align 4
  %11 = load i32, i32* %7, align 4
  %12 = load i8*, i8** %8, align 8
  %13 = call i32 @json_dispatch(i32* %9, %struct.TYPE_3__* getelementptr inbounds ([4 x %struct.TYPE_3__], [4 x %struct.TYPE_3__]* @oci_hooks.table, i64 0, i64 0), i32 %10, i32 %11, i8* %12)
  ret i32 %13
}

declare dso_local i32 @json_dispatch(i32*, %struct.TYPE_3__*, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
